# TradeSystem

./: .env.example  .gitignore  AI_AGENT_ACTION_PLAN.md  AI_AGENT_DIRECTIVES.md  AI_AGENT_INSTRUCTIONS.md  AI_Agent_Todo_List.md  ALPHATRADE_QUICKSTART.md  ALPHATRADE_SYSTEM_REVIEW_REPORT.md  ARCHITECTURAL_REVIEW_REPORT.md  AlphaTrade_System.code-workspace  Dockerfile  Dockerfile.jupyter  IMPLEMENTATION_PHASES.md  IMPROVEMENT_ROADMAP.md  KURULUM_VE_CALISTIRMA.md  Makefile  PROJECT_ARCHITECTURE.md  QUICKSTART.md  README.md  SYSTEM_GUIDE.md  TRADING_SYSTEM_ROADMAP.md  audit_report.md  backtest.py  check_system.py  diagnose_backtest.py  diagnose_equity_curve.py  directory_structure  docker-compose.override.yaml  docker-compose.yaml  fix.py  implementation phases  main.py  main_distributed.py  orchestrate.py  portfolio_backtest.py  pyproject.toml  readme.md  requirements-infrastructure.txt  requirements-research.txt  requirements.txt  (+5 more)
api/: __init__.py  main.py
backtest/: __init__.py  engine.py  walk_forward.py
backtesting/: __init__.py  engine.py  execution.py  institutional.py  institutional_extentions.py  liquidity_constraints.py  metrics.py  order_book_simulator.py  validation.py
backtesting/reports/: backtest_20251206_212818.json  backtest_20251206_213004.json  backtest_20251206_233912.json  backtest_20251206_234821.json  backtest_20251207_001702.json  backtest_20251207_104544.json  backtest_20251207_105740.json  backtest_20251207_111541.json  backtest_20251207_114056.json  backtest_20251207_123252.json
catboost_info/: learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: __init__.py  backtest_optimization.yaml  base.yaml  development.yaml  feature_params.yaml  institutional_defaults.yaml  logging_config.yaml  ml_config.yaml  optimal_d_cache.yaml  optimal_features.yaml  production.yaml  risk_limits.yaml  risk_params.yaml  settings.py  settings.yaml  staging.yaml  strategy_params.yaml  symbol_metadata.json  symbol_metrics_summary.json  symbols.py  symbols.yaml  trading_config.yaml  triple_barrier_params.yaml  yaml_config.py
config/hyperparameters/: lightgbm_defaults.yaml  xgboost_defaults.yaml
core/: __init__.py  bus.py  enums.py  events.py  interfaces.py  types.py
data/: __init__.py  alternative_data.py  bar_aggregation.py  csv_loader.py  db.py  feed.py  loader.py  models.py  processor.py  provider.py  schema.py  tick_data.py  timescale_loader.py
data/cache/: 0095bc38a1bf160f.parquet
data/holdout/: .gitignore
data/storage/: AAPL_15min.csv  ABBV_15min.csv  ADBE_15min.csv  AMGN_15min.csv  AMZN_15min.csv  AVGO_15min.csv  AXP_15min.csv  BAC_15min.csv  BA_15min.csv  BRK.B_15min.csv  CAT_15min.csv  COST_15min.csv  CRM_15min.csv  CSCO_15min.csv  CVX_15min.csv  DIS_15min.csv  DOW_15min.csv  GOOGL_15min.csv  GS_15min.csv  HD_15min.csv  HON_15min.csv  IBM_15min.csv  INTC_15min.csv  JNJ_15min.csv  JPM_15min.csv  KO_15min.csv  LLY_15min.csv  MA_15min.csv  MCD_15min.csv  META_15min.csv  MMM_15min.csv  MRK_15min.csv  MSFT_15min.csv  NKE_15min.csv  NVDA_15min.csv  PEP_15min.csv  PG_15min.csv  TMO_15min.csv  TRV_15min.csv  TSLA_15min.csv  (+6 more)
docker/: .env.example  Dockerfile.base  docker-compose.yml
docker/init_db/: 01_init.sql
docs/: QUICKSTART.md
execution/: __init__.py  algorithms.py  broker.py  handler.py  portfolio.py  smart_routing.py
features/: __init__.py  advanced.py  feature_selection.py  feature_store.py  normalizer.py  pipeline.py  price_features.py  statistical.py  technical.py  time_features.py  volume_features.py
infrastructure/: __init__.py  async_pool.py  heartbeat.py  message_bus.py  service_registry.py  state_store.py
ml/models/: base.py  xgboost_model.py
ml/training/: trainer.py
models/: __init__.py  base.py  classifiers.py  deep.py  feature_names.txt  features.txt  metrics.yaml  mlflow_registry.py  model_manager.py  reinforcement.py  training.py  training_metrics.yaml
models/artifacts/: AAPL_lightgbm_20251207_121857.pkl  LightGBMClassifier_6dfb7ecf.pkl  LightGBMClassifier_6dfb7ecf_results.json  LightGBMClassifier_75cdca74.pkl  LightGBMClassifier_75cdca74_results.json  LightGBMClassifier_a419f7b4.pkl  LightGBMClassifier_a419f7b4_results.json  alpha_lgb.pkl
monitoring/prometheus/: prometheus.yml
phase1/: __init__.py  backtesting_integration.py  check_symbol_coverage.py  risk_integration.py  walk_forward_integration.py
portfolio/: __init__.py  optimizer.py
risk/: __init__.py  core.py  manager.py  optimized_configs.py
scripts/: __init__.py  benchmark_backtest.py  calibrate_triple_barrier.py  data_quality_pipeline.py  generate_sample_data.py  generate_universe_metadata.py  init_db.sql  migrate_csv_to_timescale.py  optimize_features.py  paper_trade.py  run_backtest.py  run_bactest.py  run_institutional_backtest.py  run_jpmorgan_backtest.py  run_pipeline.py  run_pre_training_validation.py  setup.sh  setup_validation.py  stress_test.py  train_all_symbols.py  train_model.py  train_models.py  update_symbol_params.py  validate_all_data.py  validate_backtest.py
services/: __init__.py  base_service.py  data_ingestion.py  oems.py  risk_engine.py  strategy_engine.py  watchdog.py
src/: __init__.py
src/analytics/: __init__.py  attribution.py
src/backtest/: __init__.py  engine.py  metrics.py  realistic_fills.py
src/backtesting/: __init__.py  analysis.py  engine.py  event_engine.py  market_impact.py  metrics.py  monte_carlo.py  robustness.py  sensitivity.py
src/compliance/: __init__.py  audit_trail.py
src/core/: graceful_degradation.py  health_check.py  state_manager.py
src/data/: __init__.py  database.py  labeling.py  live_feed.py  live_validator.py  loader.py  preprocessor.py  websocket_hardened.py
src/execution/: __init__.py  algo_orders.py  async_pipeline.py  (+9 more)
strategies/: __init__.py  alpha_ml.py  alpha_ml_v2.py  base.py  ml_strategy.py  momentum.py  orchestrator.py  pairs_trading.py  statistical.py
tests/: __init__.py  conftest.py  conftests.py  test_bayesian_kelly_integration.py  test_broker_retry.py  test_execution_engine.py  test_models.py
tools/: performance_comparison.py
utils/: logger.py
(+183 files in other folders)
