[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphatrade"
version = "2.0.0"
description = "Institutional-grade algorithmic trading system with ML pipelines, event-driven backtesting, and advanced risk management"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "AlphaTrade Team"}
]
keywords = [
    "trading",
    "quantitative-finance",
    "algorithmic-trading",
    "backtesting",
    "machine-learning",
    "deep-learning",
    "time-series",
    "risk-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",

    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",

    # Deep learning
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",

    # Statistics and optimization
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "optuna>=3.4.0",

    # Experiment tracking
    "mlflow>=2.9.0",

    # Performance optimization
    "numba>=0.58.0",
    "bottleneck>=1.3.0",
    "joblib>=1.3.0",

    # Visualization
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Configuration and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.0",

    # Logging and utilities
    "loguru>=0.7.0",
    "tqdm>=4.66.0",

    # Database support
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",

    # Macroeconomic data
    "fredapi>=0.5.0",

    # HTTP client
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # System monitoring (health checks)
    "psutil>=5.9.0",

    # Technical analysis (may need manual install on some systems)
    # "ta-lib>=0.4.28",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

# All dependencies (for production)
all = [
    "alphatrade[dev]",
]

[project.urls]
Homepage = "https://github.com/alphatrade/alphatrade"
Documentation = "https://alphatrade.readthedocs.io"
Repository = "https://github.com/alphatrade/alphatrade"

[project.scripts]
alphatrade = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
]
ignore = ["E501", "B008", "C901", "S101"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "lightgbm.*",
    "xgboost.*",
    "catboost.*",
    "optuna.*",
    "plotly.*",
    "torch.*",
    "pytorch_lightning.*",
    "mlflow.*",
    "polars.*",
    "statsmodels.*",
    "scipy.*",
    "fredapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_gpu: marks tests that require GPU",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
